--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,11 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+body {
+  font-family: "Poppins", sans-serif;
+}
+
+
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
