Create add score dialog.

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,12 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 
 @custom-variant dark (&:is(.dark *));
 
